--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,27 @@ body {
     background-color: #FFFFFF;
 }
 
+
+img {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 ul {
-  list-style: none;
-  }
+  margin: 0;
+  padding: 0;
+}
+
   
 /* header */
 .logo {
