--- a/css/style.css
+++ b/css/style.css
@@ -229,10 +229,25 @@ ul {
     color: #434455;
   }
 
-.footer {
-    background: #2e2f42;
-  }
+/*  footer */
 
+  .footer {
+    background: #2e2f42;
+    padding: 100px 0;
+  }
+  .logo-footer {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    text-decoration: none;
+    display: inline-block;
+    margin-bottom: 16px;
+  }
   .logo-tech-white {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -250,8 +265,9 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    max-width: 264px;
   }
-
+  
   /* container */
 
 .container-header {
