--- a/css/style.css
+++ b/css/style.css
@@ -87,147 +87,306 @@ ul {
     font-style: normal;
   }
 
+
+  /* top line header*/
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+.logo {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  text-decoration: none;
+  margin-right: 76px;
+}
+.logo-tech {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  color: #2e2f42;
+  text-decoration: none;
+}
+.list-header {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  gap: 40px;
+}
+.link-nav {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+  display: block;
+  padding: 24px 0;
+}
+.link-nav:hover,
+.link-nav:focus {
+  color: #404bbf;
+}
+.address-contacts {
+  font-style: normal;
+  display: flex;
+  align-items: center;
+  display: block;
+  margin-right: auto;
+}
+.list-contacts {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  gap: 40px;
+}
+
+.contacts {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-decoration: none;
+  font-style: normal;
+}
+.contacts:hover,
+.contacts:focus {
+  color: #404bbf;
+}
+
   /* effective solutions */
 
-  .box-solutions {
-    background: #2e2f42;
-  }
-  .title-solutions {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 60px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #fff;
-  }
-  .button {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #fff;
-    background: #4d5ae5;
-    cursor: pointer;
-  }
-  .button:hover,
-  .button:focus {
-    background-color: #404bbf;
-  }
+.box-solutions {
+  background: #2e2f42;
+  padding: 188px 0;
+}
+
+.title-solutions {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 60px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
+}
+
+.button {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background: #4d5ae5;
+  cursor: pointer;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #404bbf;
+}
 
   /* section skills */
 
-  .title-skills {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
-  }
-  .list-skills {
-    list-style-type: none;
-    text-decoration: none;
-  }
-  .title-points {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-decoration: none;
-  }
-  .title-description {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 14px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    text-decoration: none;
-  }
+.skills {
+  padding: 120px 0;
+}
+.title-skills {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.title-skills {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+}
+.list-skills {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  gap: 24px;
+}
+.list-features-item {
+  width: calc((100% - 72px) / 4);
+}
+.title-points {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+  margin-bottom: 8px;
+}
+.title-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 14px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-decoration: none;
+}
+
 
   /* team */
 
-  .team {
-    background: #f4f4fd;
-  }
-  .team-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
-  }
-  .team-card {
-    background: #fff;
-  }
-  .team-list {
-    list-style-type: none;
-    text-decoration: none;
-  }
-  .team-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-decoration: none;
-  }
-  .team-profession {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-  }
+.team {
+  background: #f4f4fd;
+  padding: 120px 0;
+}
+
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.team-card {
+  background: #fff;
+  border-radius: 0px 0px 4px 4px;
+  width: calc((100% -72px) / 4);
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.team-list {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  gap:
+ 24px;
+}
+
+.name-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+}
+
+.team-profession {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-align: center;
+}
 
   /* portfolio */
 
-  .portfolio {
-    text-decoration: none;
-  }
-  .portfolio-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
-  }
-  .portfolio-list {
-    list-style-type: none;
-    text-decoration: none;
-  }
-  .portfolio-project-name {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    text-decoration: none;
-  }
-  .portfolio-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-  }
+.box-portfolio {
+  text-decoration: none;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.portfolio-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.list-portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-project-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-decoration: none;
+  margin-bottom: 8px;
+}
+
+.portfolio-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 
 /*  footer */
 
@@ -235,6 +394,7 @@ ul {
     background: #2e2f42;
     padding: 100px 0;
   }
+
   .logo-footer {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -248,6 +408,7 @@ ul {
     display: inline-block;
     margin-bottom: 16px;
   }
+
   .logo-tech-white {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -258,6 +419,7 @@ ul {
     text-transform: uppercase;
     color: #f4f4fd;
   }
+
   .description-footer {
     font-weight: 400;
     font-size: 16px;
@@ -267,7 +429,7 @@ ul {
     color: #f4f4fd;
     max-width: 264px;
   }
-  
+
   /* container */
 
 .container-header {
