--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ ul {
 
   /* portfolio */
 
-.box-portfolio {
+.portfolio {
   text-decoration: none;
   padding-top: 120px;
   padding-bottom: 120px;
