--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ ul,ol {
   display: flex;
   align-items: center;
   display: block;
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .list-contacts {
