--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ ul,ol {
   display: flex;
   align-items: center;
   display: block;
-  margin-left: auto;
+  /* margin-left: auto; */
 }
 
 .list-contacts {
@@ -407,6 +407,6 @@ ul,ol {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 
